--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,18 @@
-# Build and Release Folders
+.settings/
+.metadata/
 bin/
 bin-debug/
 bin-release/
+bin-release-temp/
 
-# Other files and folders
-.settings/
+~*
+*~
+*.p12
+*.mobileprovision
+*.air
+*.airi
+*.ipa
+*.apk
 
-# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
-# should NOT be excluded as they contain compiler settings and other important
-# information for Eclipse / Flash Builder.
+リカバリ_*
+
