--- a/BitmapFontTest/.project
+++ b/BitmapFontTest/.project
@@ -20,4 +20,11 @@
 		<nature>com.adobe.flexbuilder.project.apollonature</nature>
 		<nature>com.adobe.flexbuilder.project.actionscriptnature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>[source path] sample</name>
+			<type>2</type>
+			<locationURI>DOCUMENTS/sample</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
